Lots of structural changes. Replace manually implemented HTTP code with calls to the Apache httpclient library. Replace big POST requests with smaller ones that append to the file on the server side (could not get chunked transfer encoding to work, and would potentially consider it a compatibility problem even if I could). Hackishly integrated this as well as the new ServerContext interface into the old StudyCaster code so that lots of old code could be removed from the project. Currently the old client and the remaining unit tests work fine, except screencasts seem to be truncated after conversion; not sure what causes this. The problem might be in code that will be discarded anyway.