@@ -5,30 +5,45 @@ import java.awt.Rectangle;
 import java.awt.Robot;
 import java.awt.Toolkit;
 import java.awt.image.BufferedImage;
-import java.io.OutputStream;
-import java.net.URL;
-import no.ebakke.studycaster2.PostOutputStream;
+import java.net.URI;
+import no.ebakke.studycaster2.NonBlockingOutputStream;
 import no.ebakke.studycaster2.ServerContext;
-import no.ebakke.studycaster2.StringSequenceGenerator;
+//import org.apache.http.client.methods.HttpPost
+//import org.apache.commons.;
+//org.apache.commons.httpclient.methods.multipart.Part
 
 public class ScreenCastExperiments {
   public static void main(String args[]) throws Exception {
     Rectangle screenRect = new Rectangle(Toolkit.getDefaultToolkit().getScreenSize());
     Robot r = new Robot();
-    OutputStream os = new FileOutputStream("z:\\rectest\\testfile_newcodec.nc");
-    //ServerContext sc = new ServerContext(new URL("http://www.sieuferd.com/studycaster/server.php"));
-    //OutputStream os = new PostOutputStream(new StringSequenceGenerator("screencast_", ".ebc"), sc);
+    //OutputStream os = new FileOutputStream("z:\\rectest\\testfile_newcodec.nc");
+    final NonBlockingOutputStream os = new NonBlockingOutputStream(4 * 1024 * 1024);
+    ServerContext sc = new ServerContext(new URI("http://www.sieuferd.com/studycaster/server.php"));
+    //ServerContext sc = new ServerContext(new URI("http://127.0.0.1:7570/studycaster/server.php"));
+    os.connect(sc.uploadFile("screencast.ebc"));
     CodecEncoder comp = new CodecEncoder(os, new Dimension(screenRect.width, screenRect.height));
+
+    Thread printThread = new Thread(new Runnable() {
+      public void run() {
+        try {
+          while(true) {
+            System.out.println("Buffer: " + os.getBufferBytes());
+            Thread.sleep(200);
+          }
+        } catch (Exception e) {}
+      }
+    });
+    printThread.start();
 
     long bef, diff;
     BufferedImage bi = null;
-    for (int i = 0; i < 300; i++) {
+    for (int i = 0; i < 30; i++) {
       bef = System.currentTimeMillis();
       //for (int j = 0; j < 10; j++) {
       bi = r.createScreenCapture(screenRect);
       //}
       diff = System.currentTimeMillis() - bef;
-      System.out.println("capture took " + diff);
+      //System.out.println("capture took " + diff);
       /*
       bef = System.currentTimeMillis();
       convertToType(bi, BufferedImage.TYPE_BYTE_GRAY);
@@ -49,9 +64,12 @@ public class ScreenCastExperiments {
         comp.compressFrame(bi, System.currentTimeMillis());
       //}
       diff = System.currentTimeMillis() - bef;
-      System.out.println("compress took " + diff);
+      //System.out.println("compress took " + diff);
+      System.out.println("added another frame");
     }
     os.close();
+    System.out.println("Now done");
+    printThread.interrupt();
 
 /*
    final IRational FRAME_RATE = IRational.make(5, 1);
